Rolled back most of the new Integer->Integer.valueOf changes, in favour of suppressing the removal warning instead.