@@ -1,7 +1,7 @@
-@SuppressWarnings("deprecation") // Deprecated in Java 11
+@SuppressWarnings({"deprecation", "removal"}) // Deprecated in Java 11
 public class Issue2353 {
 
   public static void play() {
-    Integer a = Integer.valueOf("2");
+    Integer a = new Integer("2");
   }
 }
